[gd_scene load_steps=9 format=3 uid="uid://brid1ads3hnl2"]

[ext_resource type="Script" uid="uid://cu5qmu0csxsux" path="res://Scripts/gun.gd" id="1_wbae3"]
[ext_resource type="AnimationLibrary" uid="uid://chxpkr5swac2n" path="res://item_animations.res" id="2_ldnwe"]
[ext_resource type="PackedScene" uid="uid://chsas1jluft0x" path="res://Scenes/effects/emitter_shell.tscn" id="3_woa2a"]
[ext_resource type="PackedScene" uid="uid://b37cwkrg5vrjr" path="res://blender import/model_pistol.tscn" id="4_arr1h"]
[ext_resource type="PackedScene" uid="uid://rif7qlnipanh" path="res://Scenes/effects/muzzleflash.tscn" id="5_orytu"]
[ext_resource type="PackedScene" uid="uid://bnjnqwom2kws1" path="res://blender import/model_hand_right.tscn" id="6_58lm0"]
[ext_resource type="PackedScene" uid="uid://btmhdwlq4yb5e" path="res://blender import/model_hand_left.tscn" id="7_v8lcg"]

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x3asn"]

[node name="gun" type="Node3D"]
script = ExtResource("1_wbae3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": ExtResource("2_ldnwe"),
"item_animations": SubResource("AnimationLibrary_x3asn")
}

[node name="Node3D" type="Node3D" parent="."]

[node name="hand_left" parent="Node3D" instance=ExtResource("7_v8lcg")]
transform = Transform3D(-0.073736, 0, -0.100935, 0, 0.125, 0, 0.100935, 0, -0.073736, -1.498, 0.4, -1.841)

[node name="hand_right" parent="Node3D" instance=ExtResource("6_58lm0")]
transform = Transform3D(-5.46392e-09, -0.00218155, -0.124981, 0, 0.124981, -0.00218155, 0.125, -9.53586e-11, -5.46309e-09, -0.242, -0.05, 0.237)

[node name="model_pistol" parent="Node3D/hand_right" instance=ExtResource("4_arr1h")]
transform = Transform3D(2.40002, 0, 0, 0, 2.4, 0, 0, 0, 2.40002, -3.64628, 0.484098, -11.1714)

[node name="emitter_shell" parent="Node3D/hand_right/model_pistol" instance=ExtResource("3_woa2a")]
transform = Transform3D(1, 0, 2.98021e-08, 0, 1, 0, -7.45081e-09, 0, 1, 1.21389, 1.86561, 1.26202)

[node name="RayCast3D" type="RayCast3D" parent="Node3D/hand_right/model_pistol"]
transform = Transform3D(7.63278e-16, 3.79514e-08, 1, 1, -4.37114e-08, 1.08959e-15, 4.37114e-08, 1, -4.56348e-08, 1.25603, 1.24867, -0.0609107)

[node name="muzzleflash" parent="Node3D/hand_right/model_pistol" instance=ExtResource("5_orytu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.30845, 1.44925, -2.36758)

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
